--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,16 +8,19 @@
   <title>Login</title>
 </head>
 <body>
-  <h1>Login</h1>
-  <form action="/login-php/src/libs/login.php" method="POST">
-    <div class="mb-3">
-      <label for="username" class="form-label">Username</label>
-      <input type="text" class="form-control" id="username" name="username" required>
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" id="password" name="password" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+  <div class="container">
+    <h1>Login</h1>
+    <form action="/login-php/src/libs/login.php" method="POST">
+      <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username" name="username" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" name="password" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>  
+  </div> 
 </body>
 </html>
